--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
         <div class="thank_u">Спасибо за ответы! <br>Мы свяжемся с Вами сразу после обработки заказа</div>
         <div class="thank_q">Куда Вам будет удобнее отправить?</div>
         <div class="thank_var">
-            <button class="thank_v1"></button>
-            <button class="thank_v2"></button>
-            <button class="thank_v3"></button>
-            <button class="thank_v4"></button>
+            <button class="thank_v1" id="thank_v1"></button>
+            <button class="thank_v2" id="thank_v2"></button>
+            <button class="thank_v3" id="thank_v3"></button>
+            <button class="thank_v4" id="thank_v4"></button>
         </div>
         <div class="thank_under">
             <div class="thank_img">
@@ -225,15 +225,9 @@
                 </div>
             </div>
             <div class="thank_cont_container">
-                <form action="https://formsubmit.co/stmaxalex@gmail.com" method="POST">
-                    <input type="text" class="user_phone" id="input-phone" placeholder="ваш номер телефона" name="name" required>
-                    <input type="email" name="email" required>
-                    <button type="submit">Send</button>
-                </form>
-                <!-- <label class="user_phone">
-                    <input type="text" class="input-phone" id="input-phone" placeholder="ваш номер телефона"/>
-                </label> -->
-                <button class="send_phone">Получить результат</button>
+                <div class="thank_cont_js" id="thank_js">
+
+                </div>
                 <div class="present_img"></div>
                 <div class="present_text">Получите расчёт стоимости дома с экономией 20% + фундамент в подарок</div>
             </div>
